# OpenScripter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/Raw/: icon.psd
include/OpenScripter/: OpenScripter.hpp
include/OpenScripter/Stage/: PreloadStage.hpp
project/: OpenScripter.cpp
resources/: resource.rc
src/: OpenScripter.cpp
src/Stage/: PreloadStage.cpp
